kubernetes/apps/downloads/autobrr/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr
  annotations: {}
spec:
  hostnames:
    - autobrr.laurivan.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: autobrr
          port: 80
